--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,27 +2,14 @@
 export let title = "About Me";
 ---
 
-<div class="sm:flex items-center max-w-screen-xl" id="about">
-  <div class="sm:w-1/2 p-10">
-    <div class="image object-center text-center">
-      <img src="/haykal.png" alt="Muhammad Haykal" width="400"/>
-    </div>
-  </div>
-  <div class="sm:w-1/2 p-5">
-    <div class="text">
-    <span class="text-gray-500 border-b-2 border-blue-600 uppercase"
-    >About Me</span
-    >
-      <h2 class="my-4 font-bold text-3xl sm:text-4xl">
-        Muhammad <span class="text-blue-700">Haykal</span>
-      </h2>
-      <p class="text-gray-700">
-        I am a Junior Programmer with a passion for creating efficient and
-        user-friendly applications. I have experience in various programming
-        languages and frameworks, and I am always eager to learn new
-        technologies. My goal is to contribute to innovative projects that make
-        a difference in people's lives.
-      </p>
-    </div>
-  </div>
-</div>
+<section id="about" class="p-10 border-b-4 border-black">
+  <h2 class="text-2xl font-semibold mb-4">About Me</h2>
+  <h2 class="text-xl font-light mb-4">Muhammad Haykal</h2>
+  <p class="text-lg leading-relaxed">
+    I am a Junior Programmer with a passion for creating efficient and
+    user-friendly applications. I have experience in various programming
+    languages and frameworks, and I am always eager to learn new technologies.
+    My goal is to contribute to innovative projects that make a difference in
+    people's lives.
+  </p>
+</section>
